--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,15 +3,76 @@
     padding-top:0px;
   
 }
+header{
+    background-color: black;
+}
+
+.nav-link{
+    color: rgb(231, 231, 231);
+}
+.nav-link:hover{
+    color: rgb(234, 10, 10);
+}
+/* Video-tailer */
+.video-box{
+    position: relative;
+    overflow: hidden;
+    padding-top:56.25%;
+}
+
+.video-box iframe{
+    width:100%;
+    height:100%;
+    position:absolute;
+    top:0;
+    left:0;
+    padding-left:15px;
+    padding-right:15px;
+}
+@media screen and (max-width:600px){
+    .container-text{
+        justify-content: center;
+        align-items: center;
+        display: block;
+        width:320px;
+        height:100%;
+        margin: auto;
+    }
+    .container-text .text-item{
+        font-size:16px;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+    
+}
+@media screen and (min-width:600px){
+    .container-text{
+        justify-content: center;
+        align-items: center;
+        display: block;
+        width:100%px;
+        height:100%;
+        margin: auto;
+    }
+    .container-text .text-item{
+        font-size:50px;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+    
+}
 
 
 
+/* join btn start */
 .join-btn{
     display: inline-flex;
     height: 70px;
     padding: 0;
     color:white;
-   background: #009578;
+   background: #c80b0b;
    outline: none;
    overflow:hidden;
    border-radius:5px;
@@ -24,10 +85,10 @@
 }
 
 .join-btn:hover{
-    background: #008168;
+    background: #e70808;
 }
 .join-btn:active{
-    background:#006e58
+    background:#f51212
 }
 .join-btn-text, .join-btn-icon{
     height:100%;
@@ -39,11 +100,28 @@
     font-size: 1.5em;
     background-color: rgba(0, 0, 0, 0.08);
 }
+
 .div-center a{
     text-decoration: none;
 }
 
 .div-center{
-    width:100%;
-    
+    justify-content: center;
+    align-items: center;
+    display: block;
+    width:320px;
+    height:100%;
+    margin: auto;
+}
+.div-center .join-btn-text{
+    font-size:34px;
+}
+/* join btn end */
+
+.gallery{
+    background-color: rgb(15, 14, 14);
+    padding: 80px 0;
+}
+img{
+    max-width:100%;
 }
