--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,112 @@ header{
     
     }
 }
+/* new update css */
+/* .newvideo-pos {
+    position: absolute;
+    top: 16.5%;
+    left:6%;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.newvideo-pos iframe{
+    max-width:100%;
+    height: auto;
+    width:88%;
+    height:23.5%;
+}
+.banner-image1 img {
+    z-index: 0;
+}
+
+.banner-image1 {
+    position: relative;
+}
+
+/* newbtnsadd page 2 */
+/* .div-center-btnone {
+    position: absolute;
+    bottom: 42%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 75%;
+    height: auto;
+    left:12%;
+}
+.div-center-btntwo {
+    position: absolute;
+    bottom: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 75%;
+    left: 12%;
+    height: auto;
+}
+.div-center-btnthree {
+    position: absolute;
+    bottom: 11.5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 75%;
+    left: 12%;
+    height: auto;
+}  */
+
+.newvideo-pos {
+  position: absolute;
+  top: 16%;
+  left: 6%;
+  width: 100%;
+  height: 100%;
+}
+
+.newvideo-pos iframe {
+  max-width: 100%;
+  height: auto;
+  width: 88%;
+  height: 23.5%;
+}
+
+.banner-image1 {
+  position: relative;
+}
+
+.div-center-btnone,
+.div-center-btntwo,
+.div-center-btnthree {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.div-center-btnone {
+  bottom: 42.5%;
+  width: 75%;
+  height: auto;
+}
+
+.div-center-btntwo {
+  bottom: 21.5%;
+  width: 75%;
+  height: auto;
+}
+
+.div-center-btnthree {
+  bottom: 13%;
+  width: 75%;
+  height: auto;
+}
+
 
 
 /* Video-tailer */
